// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`util addPlurals 1`] = `
Array [
  "trots",
  "trot",
  "libraries",
  "library",
  "documentaries",
  "documentary",
  "people",
  "person",
]
`;

exports[`util addTagAliases 1`] = `
Array [
  "abolitions",
  "abolition",
  "israels",
  "israel",
  "maos",
  "mao",
  "essays",
  "essay",
  "police",
  "prison",
  "cop",
  "policing",
  "palestine",
  "zedong",
  "tsetung",
  "mlm",
  "maoist",
  "maoism",
]
`;

exports[`util uniq 1`] = `
Array [
  1,
  2,
]
`;

exports[`util uniq 2`] = `
Array [
  "a",
  "b",
]
`;
